/*
 *  UCF COP3330 Summer 2021 Assignment 5 Solution
 *  Copyright 2021 Jonas Turner
 */

package ucf.assignments;

import javafx.scene.Scene;
import javafx.scene.control.Label;
import javafx.scene.control.SplitPane;
import javafx.scene.layout.StackPane;
import javafx.scene.text.Font;
import javafx.stage.Stage;


public class DialogManager {

    public DialogManager(){}

    public void showDialog(String out, SplitPane splitPane){
        // text
        Label helpLabel = new Label(out);
        helpLabel.setFont(new Font(18));

        StackPane secondaryLayout = new StackPane();
        secondaryLayout.getChildren().add(helpLabel);

        Scene secondScene = new Scene(secondaryLayout, 600, 500);

        // the new window
        Stage newWindow = new Stage();
        newWindow.setTitle("Help");
        newWindow.setScene(secondScene);

        // Set position of second window, related to primary window.
        newWindow.setX(splitPane.getScene().getWindow().getX() + 200);
        newWindow.setY(splitPane.getScene().getWindow().getY() + 100);

        newWindow.show();
    }


    // show user help text
    public String helpText(){
        return " Add Item:\n Set value, serial number, and name, then click \"Add Item\".\n\n"
        +   " Remove:\n Select either by clicking, or click, then use the arrow keys\n"
        +   "while holding SHIFT to select multiple, then click the arrow next to\n " +
                "\"Add Item\", \nthen click \"Remove Item(s)\".\n\n"
        +   " Save File:\n Click Export, then click the \"Save As\" button with the desired\n " +
                "file extension, then set a filename and pick the location.\n\n"
        +   " Load File:\n Click Import, then click the \"Open\" button with the desired\n " +
                "file extension, then select desired file generated by the application.\n";
    }


    // tell user to input valid dollar amount
    public String invalidDollarAmount(){
        return "The dollar amount you have entered is invalid.\n" +
                "Please enter a valid dollar amount and try again.";
    }

    // tell user to input valid serial number string (alphanumeric)
    public String invalidSerialString(){
        return "The serial number you have entered is not alphanumeric.\n" +
                "Please omit any non-alphanumeric symbols such as \"#\" and \"&\"\n" +
                "and try again.";
    }

    // tell user input length is not accepted
    public String invalidSerialStringLength(){
        return "The serial number must be exactly 10 characters in length.\n" +
                "Please try again.";
    }

    // name length
    public String invalidNameStringLength(){
        return "The name must be between 2 and 256 characters in length.\n" +
                "Please try again.";
    }

    // tell user about duplicate serial number
    public String duplicateSerialNum(){
        return "An item with the serial number you have entered already exists.\n" +
                "Please try again.";
    }

    // tell user about duplicate name
    public String duplicateName(){
        return "An item with the name you have entered already exists.\n" +
                "Please try again.";
    }
}
